syntax = "proto3";

package todo.v1;

option go_package = "todo-grpc/gen/todo/v1;todov1";

service TodoService {
    rpc AddTodo(AddTodoRequest) returns (AddTodoResponse);
    rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
}

message AddTodoRequest {
    string title = 1;
}

message AddTodoResponse {
    int64 id = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
    repeated Todo todos = 1;
}

message Todo {
    int64 id = 1;
    string title = 2;
    bool done = 3;
}